Update insta.py for Render deployment

--- a/insta.html
+++ b/insta.html
@@ -104,7 +104,9 @@
       </form>
       <div class="or"><span>OR</span></div>
       <a class="fb" href="#" onclick="alert('This demo does not connect to Facebook'); return false;">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="#385185" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2.2v-2.9h2.2V9.2c0-2.2 1.3-3.4 3.3-3.4.96 0 1.97.17 1.97.17v2.2h-1.12c-1.1 0-1.44.68-1.44 1.38v1.65h2.45l-.39 2.9h-2.06v7A10 10 0 0 0 22 12z"/></svg>
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="#385185" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2.2v-2.9h2.2V9.2c0-2.2 1.3-3.4 3.3-3.4.96 0 1.97.17 1.97.17v2.2h-1.12c-1.1 0-1.44.68-1.44 1.38v1.65h2.45l-.39 2.9h-2.06v7A10 10 0 0 0 22 12z"/>
+        </svg>
         Log in with Facebook
       </a>
       <div class="small">
